--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="application-name" content="IM Summit: Redefined">
-  <meta name="description" content="IM Summit is Ateneo Management Information Systems Association’s flagship project - an integration of business and IT business case competition with talks, workshops and a business case competition.The project aims to introduce business and I.T oriented undergraduates to a real-life business problem wherein individuals would use their experience and creativity to develop innovative ways on how to make business processes more efficient.">
-  <meta name="keywords" content="Ateneo, MISA, MIS, Ateneo MISA, IM Summit: Redefined, Redefined, Business Case, Competition, BCT, Case Competition, SOSE, SOSE Sanggu, IM, Information, Information Management, Information Technology, Management, Management Information Systems" />
-  <meta property="og:locale" content="ph" />
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="IM Summit: Redefined" />
-  <meta property="og:description" content="IM Summit is Ateneo Management Information Systems Association’s flagship project - an integration of business and IT business case competition with talks, workshops and a business case competition.The project aims to introduce business and I.T oriented undergraduates to a real-life business problem wherein individuals would use their experience and creativity to develop innovative ways on how to make business processes more efficient." />
-  <meta property="og:image" content="/img/logo_reg.png" />
-  <meta property="og:url" content="imsummit.misa.org.ph" />
-  <meta property="og:site_name" content="IM Summit: Redefined" />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="application-name" content="IM Summit: Redefined" />
+    <meta
+      name="description"
+      content="IM Summit is Ateneo Management Information Systems Association’s flagship project - an integration of business and IT business case competition with talks, workshops and a business case competition.The project aims to introduce business and I.T oriented undergraduates to a real-life business problem wherein individuals would use their experience and creativity to develop innovative ways on how to make business processes more efficient."
+    />
+    <meta
+      name="keywords"
+      content="Ateneo, MISA, MIS, Ateneo MISA, IM Summit: Redefined, Redefined, Business Case, Competition, BCT, Case Competition, SOSE, SOSE Sanggu, IM, Information, Information Management, Information Technology, Management, Management Information Systems"
+    />
+    <meta property="og:locale" content="ph" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="IM Summit: Redefined" />
+    <meta
+      property="og:description"
+      content="IM Summit is Ateneo Management Information Systems Association’s flagship project - an integration of business and IT business case competition with talks, workshops and a business case competition.The project aims to introduce business and I.T oriented undergraduates to a real-life business problem wherein individuals would use their experience and creativity to develop innovative ways on how to make business processes more efficient."
+    />
+    <meta property="og:image" content="./favicon.ico" />
+    <meta property="og:url" content="imsummit.misa.org.ph" />
+    <meta property="og:site_name" content="IM Summit: Redefined" />
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>IM Summit: Redefined</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but IM Summit: Redefined doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but IM Summit: Redefined doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
